# Multi-Agent-Research-System

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: config.py  graph.py  llm.py  main.py
app/agents/: critic.py  planner.py  writer.py
app/tools/: search.py
app/utils/: helper.py  pdf.py
