[project]
name = "multi-agent-research-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "langgraph>=1.1.6",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
